--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "drei": "2.2.12",
+    "drei": "^0.0.45",
     "react": "17.0.1",
     "react-colorful": "4.4.4",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "react-three-fiber": "5.3.10",
-    "three": "0.123.0",
+    "three": "^0.166.0",
     "valtio": "0.4.8"
   },
   "devDependencies": {
